tests/codegen/fail/enum/derive_variant_with_field.rs
use coasys_juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
enum Test {
    Variant(i32),
}

fn main() {}
